# lox-bytecode-interpreter

./: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/chunk/: mod.rs  op_code.rs  tests.rs
src/cli/: mod.rs
src/compiler/: helpers.rs  mod.rs  parse_fn.rs  parser.rs  precedence.rs  rules.rs
src/debug/: mod.rs
src/error/: mod.rs
src/opcode/: mod.rs
src/scanner/: mod.rs  tests.rs  token.rs
src/value/: mod.rs  object.rs
src/vm/: mod.rs  tests.rs
tests/: scanner_tests.rs  vm_tests.rs
