[package]
name = "lox-interpreter"
version = "0.1.0"
edition = "2021"
authors = ["crr1c4"]
description = "Lox interpreter written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
derive_more = { version = "1", features = ["display", "debug"] }
num_enum = "0.7.3"
